--- a/sass/_listStyle.scss
+++ b/sass/_listStyle.scss
@@ -13,8 +13,11 @@ ul {
   ul {
     flex-direction: column;
     align-items: flex-start;
+    margin-left: 0; /* Отступ слева в браузере IE и Opera */
+    padding-left: 0;
     li {
       padding: 5px 0;
+      list-style-type: none;
     }
   }
 
